Speed up transitions + Fix formatting on narrower screens

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 .container { 
+    scroll-snap-type: y mandatory;
     align-items: center;
     margin: 0;
     display: flex;
@@ -21,10 +22,11 @@ body {
 }
 
 section {
+    scroll-snap-align: start;
     position: relative;
     place-content: center;
     min-height: 100vh;
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
     width: 50%;
 }
 
@@ -73,14 +75,14 @@ section {
     opacity: 1;
     transform: scale(1) /* rotateX(0deg) */;
     filter: blur(0px);
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
 .animated.out-view {
     opacity: 0;
     transform: scale(0.5) /* rotateX(100deg) */;
     filter: blur(5px);
-    transition: all 1s;
+    transition: all 0.5s;
 } 
 
 .distorted-right {
@@ -153,4 +155,24 @@ a {
     font-size: xx-large;
     text-align: center;
     justify-items: center;
+}
+
+@media (max-width: 1000px) {
+    .side-by-side {
+        flex-direction: column;
+    }
+
+    .side-by-side div {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .distorted-right {
+        transform: translateX(0px) perspective(0px) rotateY(0deg);
+    } 
+
+    .distorted-left {
+        transform: translateX(0px) perspective(0px) rotateY(0deg);
+    }
 }
